--- a/src/scss/5_wordpress/_categories.scss
+++ b/src/scss/5_wordpress/_categories.scss
@@ -61,6 +61,11 @@
         #icon-streckenfliegen #Subtraction_4 {
             fill: $color-primary;
         }
+
+        svg {
+            max-width: 50px;
+            max-height: 50px;
+        }
     }
     
     &__pretitle {
