--- a/src/scss/5_wordpress/_form.scss
+++ b/src/scss/5_wordpress/_form.scss
@@ -192,10 +192,6 @@
         option {
             padding: 0;
         }
-        
-        @include md-min {
-            margin-left: -5px;
-        }
     }
     
     textarea {
