--- a/src/scss/5_wordpress/_header.scss
+++ b/src/scss/5_wordpress/_header.scss
@@ -40,8 +40,8 @@
 
 .header__logo-container{
     z-index: 1000;
-    top: 10px;
-    left: 25px;
+    top: 15px;
+    left: 20px;
     position: fixed;
     z-index: 1111111;
     
@@ -66,6 +66,6 @@
 
 .header__hamburger {
     position: fixed;
+    top: 33px;
     right: 30px;
-    top: 30px;
 }
